Fix image overflow - home page

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -146,14 +146,14 @@
                 flex-direction: column;
 
                 .leftImageContainer {
-                    flex-basis: 100%;
+                    flex-basis: 98%;
                     margin-bottom: 75px;
-                    margin-left: -43px;
+                    margin-left: 0px;
                 }
 
                 .leftImage {
-                    box-shadow: 42px 39px 0px 0px $robinEggBlue;
-                    -webkit-box-shadow: 42px 39px 0px 0px $robinEggBlue;
+                    box-shadow: 29px 29px 0px 0px $robinEggBlue;
+                    -webkit-box-shadow: 29px 29px 0px 0px $robinEggBlue;
                 }
             }
             .realNemo {
@@ -163,13 +163,13 @@
                 padding: 0;
 
                 .rightImageContainer {
-                    flex-basis: 100%;
+                    flex-basis: 98%;
                     margin-bottom: 75px;
-                    margin-right: -45px;
+                    margin-right: 0;
 
                     .rightImage {
-                        box-shadow: -46px 39px 0px 0px $robinEggBlue;
-                        -webkit-box-shadow: -46px 39px 0px 0px $robinEggBlue;
+                        box-shadow: -29px 39px 0px 0px $robinEggBlue;
+                        -webkit-box-shadow: -29px 39px 0px 0px $robinEggBlue;
                     }
                 }
             }
@@ -233,7 +233,7 @@
             }
         }
     }
-    
+
     h4,
     .links h4 a,
     .links h4 a:first-child,
