--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1258,14 +1258,14 @@ footer p {
             flex-direction: column;
   }
   .news .newAdditions .leftImageContainer {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
+    -ms-flex-preferred-size: 98%;
+        flex-basis: 98%;
     margin-bottom: 75px;
-    margin-left: -43px;
+    margin-left: 0px;
   }
   .news .newAdditions .leftImage {
-    box-shadow: 42px 39px 0px 0px #86E0F9;
-    -webkit-box-shadow: 42px 39px 0px 0px #86E0F9;
+    box-shadow: 29px 29px 0px 0px #86E0F9;
+    -webkit-box-shadow: 29px 29px 0px 0px #86E0F9;
   }
   .news .realNemo {
     -webkit-box-orient: vertical;
@@ -1279,14 +1279,14 @@ footer p {
     padding: 0;
   }
   .news .realNemo .rightImageContainer {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
+    -ms-flex-preferred-size: 98%;
+        flex-basis: 98%;
     margin-bottom: 75px;
-    margin-right: -45px;
+    margin-right: 0;
   }
   .news .realNemo .rightImageContainer .rightImage {
-    box-shadow: -46px 39px 0px 0px #86E0F9;
-    -webkit-box-shadow: -46px 39px 0px 0px #86E0F9;
+    box-shadow: -29px 39px 0px 0px #86E0F9;
+    -webkit-box-shadow: -29px 39px 0px 0px #86E0F9;
   }
 
   .links {
